export interface PlayerAnalyticalEntity {
  _analyticsType: string;
}
